[FIX] Fix add location popup too short on mobile

--- a/sources/scss/location.scss
+++ b/sources/scss/location.scss
@@ -1,9 +1,3 @@
-@media screen and (max-width: 360px) {
-    .LocationForm-inner.js-content {
-        top: 120px;
-        width: 290px; 
-    }
-}
 .LocationForm {
   position: absolute;
   width: 100%;
@@ -88,3 +82,16 @@
   border-bottom: 1px solid #ccc;
 }
 
+@media screen and (max-width: 360px) {
+    .LocationForm-inner.js-content {
+        top: 120px;
+        width: 290px; 
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .LocationForm-inner.js-content {
+        max-height: 100%;
+        overflow-y: scroll;
+    }
+}
